<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:context="com.kizadev.scanapps.presentation.fragments.DetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="48dp"
        android:layout_marginHorizontal="24dp"
        android:background="?attr/details_background"
        android:elevation="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/ic_moon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            style="@style/SecondaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/app_name"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon" />

        <TextView
            android:id="@+id/size"
            style="@style/DetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <TextView
            android:id="@+id/app_size"
            style="@style/SecondaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@id/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/size"
            android:text="@string/_256_49mb"/>

        <View
            android:id="@+id/first_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size" />

        <TextView
            android:id="@+id/targetSdk"
            style="@style/DetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first_divider"
            app:layout_constraintStart_toStartOf="@id/size"
            android:layout_marginTop="16dp"
            android:text="@string/targetsdkversion" />

        <TextView
            android:id="@+id/app_targetSdk"
            style="@style/SecondaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@id/targetSdk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/targetSdk"
            android:text="@string/_30"/>

        <View
            android:id="@+id/second_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/targetSdk"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:background="@color/grey" />


        <TextView
            android:id="@+id/installationDate"
            style="@style/DetailsTextStyle"
            app:layout_constraintTop_toBottomOf="@id/second_divider"
            app:layout_constraintStart_toStartOf="@id/targetSdk"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installation_date" />

        <TextView
            android:id="@+id/app_installationDate"
            style="@style/SecondaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@id/installationDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/installationDate"
            android:text="@string/_05_12_2021"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/button_back"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:elevation="40dp"
        android:layout_marginHorizontal="24dp"
        android:background="?attr/button_ripple"
        android:text="@string/button_back"
        android:textColor="?attr/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>